--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                         <input type="text" id="city" class="form-control">
                     </div>
                     <div class="form-group">
-                        <label for="state"></label>
-                        <input type="text" id="state" class="form-control">
+                        <label for="countryCode"></label>
+                        <input type="text" id="countryCode" class="form-control">
                     </div>
                 </form>
                 </div>
